--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Live burn dashboard for BUMPER on Solana: total burned, USD value, price, and recent burn transactions." />
   <link rel="preload" as="image" href="bg-desktop.png">
   <link rel="preload" as="image" href="bg-thumb.webp">
-  <link rel="preload" as="image" href="titolo.png">
+  <link rel="preload" as="image" href="titolotr.png">
   <style>
     :root{
       --glass-bg: rgba(0,0,0,0.38);
@@ -29,7 +29,7 @@
     // ---- Config ----
     const BG_SRC      = 'bg-desktop.png';       // main background
     const THUMB_SRC   = 'bg-thumb.webp';        // small preview (optional but recommended)
-    const TITLE_SRC   = 'titolo.png';           // title image
+    const TITLE_SRC   = 'titolotr.png';           // title image
     const BURN_JSON   = 'data/burn.json';
     const PRICE_JSON  = 'data/price.json';
     const FIT_MODE    = 'cover'; // 'contain' to avoid any crop
