--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     const BG_SRC      = 'bg-desktop.png';       // main background
     const THUMB_SRC   = 'bg-thumb.webp';        // small preview (optional but recommended)
     const TITLE_SRC   = 'titolotr.png';           // title image
+    let TITLE_RAISE_PX = 40;                 // raise title by N px (increase to move higher)
     const BURN_JSON   = 'data/burn.json';
     const PRICE_JSON  = 'data/price.json';
     const FIT_MODE    = 'cover'; // 'contain' to avoid any crop
@@ -221,7 +222,7 @@
         const tw = maxW;
         const th = titleImg.naturalHeight * scale;
         const tx = Math.floor((w - tw) / 2);
-        const ty = Math.max(px(14), topY - th - px(10));
+        const ty = Math.max(px(14), topY - th - px(10) - px(TITLE_RAISE_PX));
         ctx.drawImage(titleImg, tx, ty, tw, th);
       } else {
         // fallback text title
